tests/agl/rejections/type/duplicate_record_field.agl
record P
  n: int
  n: text
